--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,8 @@
-<div class={{}} role="alert">
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
+<!--<div *ngIf=isDisplayed>-->
+  <!--<div class={{alertClass}} role="alert">-->
+    <strong>{{message}}</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <!--<span aria-hidden="true">&times;</span>-->
   </button>
-</div>
+ <!-- </div>-->
+<!--</div>-->
