--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -6,25 +6,25 @@
 	</div>
 </div>
 
-<div *ngIf="inscription" class="alert alert-success">
-  <strong>Success!</strong> Utilisateur ajouté
-</div>
-
-<div class="row"> 
-<div class="col-sm-4"></div> 
-<div class="col-sm-4"> 
+<div class="row">
+<div class="col-sm-4"></div>
+<div class="col-sm-4">
 <form class="form-group" >
-	<input id="nom" type="text" class="form-control" name="nom" placeholder="Nom">  
-	<input id="prenom" type="text" class="form-control" name="prenom" placeholder="Prenom">  
-	<input id="mail" type="text" class="form-control" name="mail" placeholder="Mail" >  
-	<input id="pwd" type="text" class="form-control" name="pwd" placeholder="Password">  
-	<input id="adresse" type="text" class="form-control" name="adresse" placeholder="Adresse">  
-	<input id="ville" type="text" class="form-control" name="ville" placeholder="Ville">  
-	<input id="codePostal" type="text" class="form-control" name="codePostal" placeholder="CodePostal">  
-	<input id="tel" type="text" class="form-control" name="tel" placeholder="Tel">  
-
+	<input id="nom" type="text" class="form-control" name="nom" [(ngModel)]="member.firstname" placeholder="Nom">  
+	<input id="prenom" type="text" class="form-control" name="prenom" [(ngModel)]="member.lastname" placeholder="Prenom">  
+	<input id="mail" type="email" class="form-control" name="mail" [(ngModel)]="member.email" placeholder="Mail" >  
+	<input id="pwd"type="password" class="form-control" name="pwd" [(ngModel)]="member.password" placeholder="Password">  
+	<input id="adresse" type="text" class="form-control" name="adresse" [(ngModel)]="member.address" placeholder="Adresse">  
+	<input id="ville" type="text" class="form-control" name="ville" [(ngModel)]="member.city" placeholder="Ville">  
+	<input id="codePostal" type="text" class="form-control" name="codePostal" [(ngModel)]="member.postalCode" placeholder="CodePostal">  
+	<input id="tel" type="text" class="form-control" name="tel" [(ngModel)]="member.phone" placeholder="Tel">  
+	<div class="form-check">
+    	<input type="checkbox" class="form-check-input" [(ngModel)]="member.administrateur" id="admin">
+    	<label class="form-check-label" for="admin" id="admin">Administrateur</label>
+    </div>
+	<br/>
 	<button type="submit" class="btn btn-default" (click)="inscription()">Inscrire</button> 
-</form> 
-</div> 
-<div class="col-sm-4"></div> 
+</form>
+</div>
+<div class="col-sm-4"></div>
 </div>
