--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<header></header>
+<header>
+  <app-header></app-header>
+</header>
 
 <navbar></navbar>
 <section id="site-content">
   <router-outlet></router-outlet>
-  <app-messages></app-messages>
 </section>
 
 
