--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,7 @@
-<!--<div *ngIf=isDisplayed>-->
-  <!--<div class={{alertClass}} role="alert">-->
+
+  <div class={{alertClass}} role="alert">
     <strong>{{message}}</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <!--<span aria-hidden="true">&times;</span>-->
+    <span aria-hidden="true">&times;</span>
   </button>
- <!-- </div>-->
-<!--</div>-->
+ </div>
