--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,33 +11,14 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a
 					routerLink="/"><i class="glyphicon glyphicon-home"></i></a></li>
-				<li class="dropdown"><a class="dropdown-toggle"
-					data-toggle="dropdown"
-					routerLink="/products">Livres<span
-						class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a routerLink="/products">Recherche</a></li>
-						<li><a routerLink="/products">Periodiques</a></li>
-						<li><a routerLink="/products">Auteurs</a></li>
-					</ul></li>
+		<li><a routerLink="/book">Recherche</a></li>
 				<li><a routerLink="/panier">Panier</a></li>
 				<!-- Si on est connecté en tant que membre -->
-				<li><a routerLink="/compte">Mon
-						compte</a></li>
+				<li><a routerLink="/compte">Mon compte</a></li>
 				<!-- Si on est admin -->
 				<li><a routerLink="/gestioncompte">Gestion
 						membres et paniers</a></li>
 				<li style="width: 30%;">
-				<form action="${pageContext.request.contextPath }/search" class="input-group">
-				  <div class="input-group">
-				    <input type="text" class="form-control"  placeholder="Search" id="search" name="search">
-				    <div class="input-group-btn">
-				      <button class="btn btn-default" type="submit">
-				        <i class="glyphicon glyphicon-search"></i>
-				      </button>
-				    </div>
-				  </div>
-				</form>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
