modif menu navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,9 +9,8 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a
-					routerLink="/"><i class="glyphicon glyphicon-home"></i></a></li>
-		<li><a routerLink="/book">Recherche</a></li>
+				<li class="active"><a routerLink="/"><i class="glyphicon glyphicon-home"></i></a></li>
+				<li><a routerLink="/book">Recherche</a></li>
 				<li><a routerLink="/panier">Panier</a></li>
 				<!-- Si on est connecté en tant que membre -->
 				<li><a routerLink="/compte">Mon compte</a></li>
