[GWEN] maj creation de livre ok

--- a/src/app/creationlivre/creationlivre.component.html
+++ b/src/app/creationlivre/creationlivre.component.html
@@ -2,11 +2,11 @@
 	<div class="col-sm-4"></div>
 	<div class="col-sm-4">
 		<form class="form-group">
-			<input id="ISBN" type="text" class="form-control" name="ISBN" [(ngModel)]="book.ISBN" placeholder="ISBN">
-			<input id="titre" type="text" class="form-control" name="bookTitre" [(ngModel)]="book.bookTitre" placeholder="titre">
-			<input id="description" type="text" class="form-control" name="bookDescription" [(ngModel)]="book.bookDescription" placeholder="description">
-			<input id="prix" type="text" class="form-control" name="bookPrice" [(ngModel)]="book.bookPrice" placeholder="prix">
-			<input id="datePublication" type="text" class="form-control" name="publicationDate" [(ngModel)]="book.publicationDate" placeholder="datePublication">
+			<input id="isbn" type="number" class="form-control" name="isbn" [(ngModel)]="book.isbn" placeholder="ISBN">
+			<input id="titre" type="text" class="form-control" name="bookTitre" [(ngModel)]="book.bookTitre" placeholder="Titre">
+			<input id="description" type="text" class="form-control" name="bookDescription" [(ngModel)]="book.bookDescription" placeholder="Description">
+			<input id="prix" type="text" class="form-control" name="bookPrice" [(ngModel)]="book.bookPrice" placeholder="Prix">
+			<input id="datePublication" type="text" class="form-control" name="publicationDate" [(ngModel)]="book.publicationDate" placeholder="Date de publication">
 			<!--<input id="categories" type="text" class="form-control" name="category" [(ngModel)]="book.category" placeholder="categories"> 
     <input id="editor" type="text" class="form-control" name="editor" [(ngModel)]="book.editor" placeholder="editor">
 	<br/>
@@ -17,57 +17,41 @@
 				<option [(checklist)]="book.authors" [checklistValue]="author.authorId">{{author.authorLastname}} {{author.authorFirstname}}</option>
 			</select>-->
 			<br/>
-			<div>
+	<!--		<div>
 			<div class="" style=" float:left; height: 100px; width:200px; border-left:5px solid #14265E; padding:5px 10px 10px 10px; font-size:1.1em; overflow:auto;">
 				<div class="form-check" id="listAuthors"><label for="listAuthors">Auteurs :</label></div>
 				<label *ngFor="let author of listeAuthor">
-                 <input type="checkbox" class="form-check-input" name="selectionAuteur" [(checklist)]="book.authors" [checklistValue]="author.authorId"/>
+                 <input type="checkbox" class="form-check-input" name="selectionAuteur" [(checklist)]="book.authorIds" [checklistValue]="author.authorId"/>
                   {{author.authorLastname}} {{author.authorFirstname}}
             </label>
 			</div>
-			</div>
+			</div>-->
+						<select name="author.authorId" [(ngModel)]='book.authorIds' multiple>
+                           <option *ngFor="let author of listeAuthor"
+                           [ngValue]="author.authorId">{{author.authorLastname}} {{author.authorFirstname}}</option>
+                       </select>
+
+
+			<select name="editor.idEditor" [(ngModel)]='book.editorId'>
+                           <option *ngFor="let editor of listeEditor"
+                           [ngValue]="editor.idEditor">{{editor.name}}{{book.editorId}}</option>
+                       </select>
+
+			<select name="category.idCategory" [(ngModel)]='book.categoryId'>
+                           <option *ngFor="let category of listeCategory"
+                           [ngValue]="category.idCategory">{{category.name}}{{categoryIds}}</option>
+                       </select>
 			
-
-			<div>
-			<div class="" style=" float:left; height: 100px; width:200px; border-left:5px solid #14265E; padding:5px 10px 10px 10px; font-size:1.1em; overflow:auto;">
-				<div class="form-check" id="listEditors"><label for="listEditors">Editeurs :</label></div>
-				<label *ngFor="let editor of listeEditor">
-                 <input type="radio" class="form-check-input" name="selectionEditeur" [(checklist)]="book.editor" [checklistValue]="editor.editorId"/>
-                  {{editor.name}}
-            </label>
-			</div>
-			</div>
-
-
-			
-			<div>
+		<!--	<div>
 			<div class="" style=" float:left; height: 100px; width:200px; border-left:5px solid #14265E; padding:5px 10px 10px 10px; font-size:1.1em; overflow:auto;">
 				<div class="form-check" id="listCategorys"><label for="listCategorys">categories :</label></div>
 				<label *ngFor="let category of listeCategory">
-                 <input type="radio" class="form-check-input" name="selectionCategory" [(checklist)]="book.category" [checklistValue]="category.categoryId"/>
-                  {{category.name}}
+                 <input type="radio" class="form-check-input" name="selectionCategory" [(checklist)]="categoryIds" [checklistValue]="category.idCategory"/>
+                  {{category.name}}{{categoryIds}}
             </label>
 			</div>
-			</div>
+			</div>-->
 			<br/>
-			
-			<br/>
-<br/>
-			<br/>
-<br/>
-			
-			<br/>
-<br/>
-			<br/>
-			<br/>
-			
-			<br/>
-<br/>
-			<br/>
-			<br/>
-			
-			<br/>
-<br/>
 		
 			<div class="form-check">
 				<input type="checkbox" class="form-check-input" [(ngModel)]="book.periodicBook" name="periodicBook" id="periodique">
