--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,37 +1,34 @@
 <div class="container">
-           <div class="panel panel-primary">
-               <div class="panel-body">
-                   <div class="table-responsive">
-                       <table class="table table-striped">
-                           <thead>
-                               <tr>
-                                   <th></th>
-                                   <th style='text-align:left'>Titre</th>
-                                   <th style='text-align:left'>Prix</th>
-                                   <th style='text-align:left'>Auteur(s)</th>
-                                   <th style='text-align:left'>Editeur</th>
-                                   <th style='text-align:left'>Actions</th>
-                               </tr>
-                           </thead>
-                           <tbody id="contenant">
-                           
-                               <tr *ngFor="let book of books">
-                                   <td><img style="max-width: 100px; height: auto;" src="http://localhost:8080/GestionBiblio/book/image/?imagePath={{book.imagePath}}"/></td>
-                                   <td style="vertical-align: middle;">{{book.bookTitre}}</td>
-                                   <td style="vertical-align: middle;">{{book.bookPrice}}<i class="Eglyphicon glyphicon-euro"></i></td>
-                                   <!-- <td style="vertical-align: middle;">
-                                    	<span  *ngFor="let author of book.authors"> {{author.authorFirstname}} {{author.authorLastname}} |</span>
-                                    </td>
-                                    <td style="vertical-align: middle;">{{book.editor.editorName}}</td> -->
-                                   <td style="vertical-align: middle;">
-                                       <button (click)="enleverDuPanier(book.id)">Supprimer du panier</button>
-                                   </td>
-                               </tr>
-                           
-                           </tbody>
-                       </table>
-                   <!-- <button [disabled]="!dss.loggedMember.administrateur" (click)="emprunter(book.id)">Valider le panier</button>-->
-                </div>
+    <div class="panel panel-primary">
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th style='text-align:left'>Titre</th>
+                            <th style='text-align:left'>Prix</th>
+                            <th style='text-align:left'>Auteur(s)</th>
+                            <th style='text-align:left'>Editeur</th>
+                            <th style='text-align:left'>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="contenant">
+                        <tr *ngFor="let bookBasketFull of bookBasketFulls">
+                            <td><img style="max-width: 100px; height: auto;" src="http://localhost:8080/GestionBiblio/book/image/?imagePath={{bookBasketFull.imagePath}}"/></td>
+                            <td style="vertical-align: middle;">{{bookBasketFull.bookTitre}}</td>
+                            <td style="vertical-align: middle;">{{bookBasketFull.bookPrice}}<i class="Eglyphicon glyphicon-euro"></i></td>
+                            <td style="vertical-align: middle;">
+                                <span *ngFor="let author of bookBasketFull.authorIds">{{author}} |</span>
+                            </td>
+                            <td style="vertical-align: middle;">{{bookBasketFull.editor.editorName}}</td>
+                            <td style="vertical-align: middle;">
+                                <button (click)="enleverDuPanier(bookBasketFull.bookBasketId)">Supprimer du panier</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+</div>
