--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <ng-template message-host></ng-template>
 <!--<router-outlet name="messages"></router-outlet>-->
 <br><br>
-<h1 class="titre">Gestionnaire de bibliothèque</h1>
+<h1 class="titre">Biblio-Tech</h1>
 <br>
 <br>
