--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
+<header>
+  <app-header></app-header>
+</header>
+
+<navbar></navbar>
 <app-titreetsoutitre></app-titreetsoutitre>
 
 <div class="row">
